--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,35 @@
    background-color: white;
    padding: 5px;
    color: black;
-   width: 30%;
+   width: 320px;
    height: 80%;
    border-radius: 0px 0px 0px 30px;
-   box-shadow: 5px 10px 20px grey;
+   box-shadow: 5px 5px 40px black;
 
-   font-family: monospace;
-   font-weight: bold;
+
   }
+
+  #logo {
+  position: absolute;
+  text-align: center;
+  padding: 0px;
+  right: 335px;
+  top: -50px;
+  z-index: 1001;
+
+  }
+
+  h1,h2,h3{
+
+    font-family: monospace;
+    font-size: 18px;
+    font-weight: lighter;
+    padding-left: 35px;
+    padding-top: 34px;
+
+  }
+
+#image{
+padding-left: 35px;
+padding-top: 10px;
+}
