--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
   }
 
   #info {
@@ -14,40 +15,60 @@
    right: 10px;
    top: 10px;
    z-index: 1000;
-   background-color: white;
    padding: 5px;
    color: black;
    width: 310px;
    height: 530px;
-   /*border-radius: 0px 0px 0px 30px;*/
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-
-
+   border-radius: 2px;
+   background-color: rgb(255, 255, 255);
+   box-shadow: 0 1px 3px rgba(0,0,0,0.12);
   }
 
   #logo {
-  position: absolute;
-  text-align: center;
+  position:absolute;
+  display:block;
+  margin:auto;
   padding: 0px;
-  right: 325px;
-  top: -40px;
-  z-index: 1001;
-
+  top: -60px;
+  left: 20px;
   }
 
-  h1,h2,h3{
-
-    font-family: monospace;
-    font-size: 18px;
-    font-weight: lighter;
-    padding-left: 35px;
-    padding-top: 34px;
-
+  h1,h3{
+    position: absolute;
+    display: block;
+    font-family: 'Roboto';
+    font-weight: 300;
+    text-transform: capitalize;
+    font-size: 17px;
+    line-height:40px;
+    margin-left: 30px;
+    margin-top: 100px;
+    margin-right: 30px;
   }
 
-#image{
+h2{
   position: absolute;
-padding-left: 35px;
-padding-top: 10px;
-/*box-shadow: 0 1px 3px rgba(0,0,0,0.12);*/
+  display: block;
+  font-family: 'Roboto';
+  font-weight: 300;
+
+  font-size: 17px;
+  line-height:40px;
+  margin-left: 30px;
+  margin-top: 100px;
+  margin-right: 30px;
 }
+
+  #star {
+    position: absolute;
+}
+
+  #image{
+   display:block;
+   position:absolute;
+   left:0;
+   right:0;
+   bottom:25px;
+   margin:auto;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12);
+  }
