--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,32 @@
   left: 20px;
   }
 
-  h1,h3, {
+  h1 {
+  position: absolute;
+  display: block;
+  font-family: 'Roboto';
+  font-weight: 300;
+  text-transform: capitalize;
+  font-size: 17px;
+  line-height:40px;
+  margin-left: 30px;
+  margin-top: 100px;
+  margin-right: 30px;
+}
+
+  h2 {
+    position: absolute;
+    display: block;
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 17px;
+    line-height:40px;
+    margin-left: 30px;
+    margin-top: 110px;
+    margin-right: 30px;
+  }
+
+  h3 {
     position: absolute;
     display: block;
     font-family: 'Roboto';
@@ -42,22 +67,9 @@
     font-size: 17px;
     line-height:40px;
     margin-left: 30px;
-    margin-top: 100px;
+    margin-top: 150px;
     margin-right: 30px;
   }
-
-h2{
-  position: absolute;
-  display: block;
-  font-family: 'Roboto';
-  font-weight: 300;
-
-  font-size: 17px;
-  line-height:40px;
-  margin-left: 30px;
-  margin-top: 100px;
-  margin-right: 30px;
-}
 
   #star {
     position: absolute;
